--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "start": "npm run serve",
     "serve": "node dist/app.js",
     "watch-node": "nodemon dist/app.js",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "nodeshift": "nodeshift"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^1.18.3",
+    "nodeshift": "^2.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   },
@@ -25,6 +27,7 @@
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.17",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "mongodb": "^3.1.10"
