--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.17",
     "body-parser": "^1.18.3",
-    "dotenv": "^6.2.0",
+    "env-var": "^3.4.2",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
     "mongodb": "^3.1.10"
