--- a/package.json
+++ b/package.json
@@ -12,14 +12,13 @@
     "start": "npm run serve",
     "serve": "node dist/app.js",
     "watch-node": "nodemon dist/app.js",
-    "watch-ts": "tsc -w",
-    "nodeshift": "nodeshift"
+    "watch-ts": "tsc -w"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^13.7.6",
     "nodemon": "^1.18.3",
-    "nodeshift": "^2.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.0.1"
   },
@@ -27,9 +26,9 @@
     "@types/express": "^4.16.0",
     "@types/mongodb": "^3.1.17",
     "body-parser": "^1.18.3",
-    "env-var": "^3.4.2",
+    "env-var": "^6.0.1",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
-    "mongodb": "^3.1.10"
+    "mongodb": "^3.5.4"
   }
 }
