--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,18 +7,19 @@
         "moduleResolution": "node",
         "sourceMap": true,
         "outDir": "dist",
-        "baseUrl": ".",
-        "paths": {
-            "*": [
-                "node_modules/*",
-                "src/types/*"
-            ]
-        },
+        // "baseUrl": ".",
+        // "paths": {
+        //     "*": [
+        //         "node_modules/*",
+        //         "src/types/*"
+        //     ]
+        // },
         "lib": [
             "es2015"
         ]
-    },
-    "include": [
-        "src/**/*"
-    ]
+    }
+    // },
+    // "include": [
+    //     "src/**/*"
+    // ]
 }
