--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build-ts": "tsc",
-    "start": "npm run serve",
+    "start": "tsc & npm run serve",
     "serve": "node dist/app.js",
     "watch-node": "nodemon dist/app.js",
     "watch-ts": "tsc -w",
